Add flag to ignore quickcancel
Useful for locking explicitly

--- a/slock.1
+++ b/slock.1
@@ -5,6 +5,7 @@
 .Nd simple X screen locker
 .Sh SYNOPSIS
 .Nm
+.Op Fl n
 .Op Fl v
 .Op Ar cmd Op Ar arg ...
 .Sh DESCRIPTION
@@ -14,6 +15,9 @@ is a simple X screen locker. If provided,
 is executed after the screen has been locked.
 .Sh OPTIONS
 .Bl -tag -width Ds
+.It Fl n
+Lock now; ignores any attempt to quickcancel lock. Useful for locking
+explicitly.
 .It Fl v
 Print version information to stdout and exit.
 .El
