Add addtional documentation for patches

--- a/slock.1
+++ b/slock.1
@@ -41,3 +41,12 @@ $
 .Nm
 can be customized by creating a custom config.h from config.def.h and
 (re)compiling the source code. This keeps it fast, secure and simple.
+.Pp
+Some options can be alternatively customized through
+.Em Xresources
+with
+.Em slock
+prefix. See the source code for which settings can be provided through this method.
+.Sh SEE ALSO
+.Xr xorg.conf 5 ,
+.Xr xrdb 1
